--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 /cieebluetooth/.idea/workspace.xml
+cieebluetooth/.gradle/1.10/taskArtifacts/cache.properties.lock
+cieebluetooth/.gradle/1.10/taskArtifacts/cache.properties.lock
+cieebluetooth/.gradle/1.10/taskArtifacts/fileHashes.bin
+cieebluetooth/.gradle/1.10/taskArtifacts/fileSnapshots.bin
+cieebluetooth/.gradle/1.10/taskArtifacts/outputFileStates.bin
+cieebluetooth/.gradle/1.10/taskArtifacts/taskArtifacts.bin
